--- a/_config.yml
+++ b/_config.yml
@@ -5,17 +5,17 @@ image_thumbs_loc: "/images/thumbs"
 google_analytics: "UA-46465113-2"
 
 # UI configs
-title: "Photography by Ram Patra"
+title: "Photography by luckygirlcai"
 subtitle: "See the world through my eyes!"
 author: "Ram Patra"
 header:
  title: "Photography"
- subtitle: "by Ram Patra"
+ subtitle: "by luckygirlcai"
 footer:
- name: "Hey there, my name is Ram"
- bio: "I am a developer and a tech aficionado from India. Love making teeny tiny apps solving tiny problems in life and now learning photography."
- github: "Want a website like this for yourself for free? Just <a href=\"https://github.com/ramswaroop/photography\">fork me on github</a> ;)"
-web_design: "AJ"
+ name: "Hey there, my name is luckygirlcai"
+ bio: "I'm a designer."
+ github: "Want a website like this for yourself for free? Just <a href=\"https://github.com/luckygirlcai\">fork me on github</a> ;)"
+web_design: "luckygirlcai"
 social_urls:
   facebook: "https://www.facebook.com/ramswaroop"
   twitter: "https://www.twitter.com/ram__patra"
